<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Login">

    <ImageView
        android:id="@+id/AppLogoRegister"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/glLogin1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_login" />

    <android.support.constraint.Guideline
        android:id="@+id/glLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>

    <RelativeLayout
        android:id="@+id/RLRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glLogin1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/LGhello"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/LGslogan"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/txtLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_madicine1"
                android:hint="@string/username"
                android:paddingLeft="20dp" />

            <EditText
                android:id="@+id/txtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/custom_madicine1"
                android:hint="@string/password"
                android:paddingLeft="20dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tv_resetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="right"
                android:text="@string/forgotmypassword"
                android:textColor="@color/purple_500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/btn_dangnhap"
                    android:background="@drawable/custom_button"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textFontWeight="400"
                    android:textSize="25dp" />

                <LinearLayout
                    android:id="@+id/LoginLinear3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <ImageButton
                        android:id="@+id/imgFingerPrint"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/icon_fingerprint"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:paddingLeft="10dp"
                            android:text="@string/fingerprint" />
                    </RelativeLayout>
                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">


                    <android.support.constraint.Guideline
                        android:id="@+id/glLogin2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.55" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/alreadyhaveaccount"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/glLogin2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/GotoRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/gotoregister"
                        android:textColor="#03A9F4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/glLogin2"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>