<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".PersonalInfomation">

    <LinearLayout
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            tools:ignore="MissingConstraints"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/GoBack"
                    android:layout_alignParentLeft="true"
                    app:srcCompat="@drawable/icon_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/personalprofile"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </RelativeLayout>

            <LinearLayout
                tools:ignore="MissingConstraints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>
        <!--phần đầu-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_user1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="180dp"
                                android:layout_height="180dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.497"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="1.0"
                                app:srcCompat="@drawable/img_user" />

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_margin="-50dp"

                                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                                app:layout_constraintHorizontal_bias="1.0"
                                app:layout_constraintStart_toStartOf="@+id/imageView3"
                                app:layout_constraintTop_toTopOf="@+id/imageView3"
                                app:layout_constraintVertical_bias="1.0"
                                app:srcCompat="@drawable/tt_camera" />


                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/basicinfo"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <ImageView
                            android:layout_marginTop="6dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/tt_line" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </LinearLayout>

                        <EditText
                            android:id="@+id/txt_hoten"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/fullname"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp" />

                        <EditText
                            android:id="@+id/txt_ngaysinh"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/dob"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp" />

                        <LinearLayout
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <CheckBox

                                android:layout_gravity="left"
                                android:layout_weight="1"
                                android:id="@+id/GenderMale"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:text="@string/male" />

                            <CheckBox
                                android:id="@+id/GenderFemale"
                                android:layout_gravity="left"
                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:text="@string/female" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/txt_sdt"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/phonenumber"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp" />

                        <EditText
                            android:id="@+id/txt_msbh"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/healthid"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp" />

                        <EditText
                            android:id="@+id/txt_cmnn"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/personalid"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp" />

                        <EditText
                            android:id="@+id/txt_diachi"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/address"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp" />
                        <EditText
                            android:id="@+id/txt_email"
                            android:paddingLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="Email"
                            android:inputType="textWebEmailAddress" />


                    </LinearLayout>

<!--                    thông tin bệnh lý start-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_margin="10dp"
                            android:text="@string/personalhealthinfo"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <ImageView
                            android:layout_marginTop="6dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/tt_line" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </LinearLayout>
                        <EditText
                            android:id="@+id/txt_nhommau"
                            android:paddingLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/bloodtype"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/txt_cannang"
                            android:paddingLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/weight"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/txt_chieucao"
                            android:paddingLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/height"
                            android:inputType="textPersonName" />
                        <EditText
                            android:id="@+id/txt_tieusu"
                            android:gravity="top"
                            android:paddingTop="10dp"
                            android:paddingLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/custom_madicine1"
                            android:hint="@string/profile"
                            android:inputType="textPersonName" />
                    </LinearLayout>
                    <!-- thông tin bệnh lý end-->


                    <LinearLayout
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btn_cancel"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/custom_red"
                            android:textColor="#fff"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Cancel"
                            android:textSize="20dp"

                            />
                        <Button
                            android:id="@+id/btn_save"
                            android:background="@drawable/custom_button"
                            android:textColor="#fff"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Save"
                            android:textSize="20dp"

                            />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>